2013-05-09  Thomas Mattison  <mattison <at> phas.ubc.ca>

	* src/fit.c|h src/save.c src/show.c src/set.c src/unset.c
	docs/gnuplot.doc:  New convergence criterion. The new simpler criterion
	in regress() is absolute reduction in chisquare for an iteration of less
	than epsilon*chisquare plus epsilon_abs (new setting).  The default
	convergence criterion is thus always relative no matter what the
	chisquare is, but users now have the flexibility of adding an absolute
	convergence criterion through `set fit limit_abs`.
	Patch #230.

2013-05-08  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm:  Pattern-fill support for the canvas terminal.

	* demo/html/webify_canvas.pl:  Re-order main loop to avoid trailing
	cruft in the output HTML page.  Include support for pattern fill.

	* src/datafile.c:  Remove use of isblank(), since too many of our
	supported platforms are mired back in the pre C99 era.

	* src/graph3d.c: this_plot->hidden3d_top_linetype is a better start
	point for calculating contour linetypes than the apparent plot l_type,
	because that may have been overwritten by previous definitions.
	This way, splot ... lt N  will always get contour linetypes starting
	with N+1.

	* src/datafile.c:  Valgrind found a case where df_column[foo].position
	had never been initialized.  Boom.

2013-05-08  Thomas Mattison  <mattison <at> phas.ubc.ca>

	* src/fit.c (marquardt):  Zero-change in chisquare is now "BETTER"
	rather than "WORSE" to avoid extra iterations which would only
	increase lambda. 
	Patch #230.

	* src/fit.c (call_gnuplot):  Print useful info on undefined-function
	error. Derived from patchset #230.

	* src/fit.c (fit_command):  If the user supplies errors but any of them 
	are zero, there will be a divide by zero, trashing the fit.  Add a check 
	which prints info about the offending data point before aborting.
	Derived from patchset #230.

2013-05-08  Bastian Maerkisch  <bmaerkisch@web.de>
